crates/solverforge-macros/tests/ui/pass/multi_list_owners/domain/route.rs
use solverforge::prelude::*;

#[planning_entity]
pub struct Route {
    #[planning_id]
    pub id: usize,

    #[planning_list_variable(element_collection = "route_tasks")]
    pub tasks: Vec<usize>,
}
