crates/solverforge-macros/tests/ui/fail/planning_solution_missing_list_element_collection/domain/route.rs
use solverforge::prelude::*;

#[planning_entity]
pub struct Route {
    #[planning_id]
    pub id: usize,

    #[planning_list_variable(element_collection = "all_visits")]
    pub visits: Vec<usize>,
}
